--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@phosphor-icons/react": "^2.1.4",
     "@prisma/client": "^5.10.2",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
